# TileImageComparer

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  benchmark.sh  build.sh  generator.py  groundtruth.csv  svm_model.xml
include/: BlobDetect.hpp  CPSImageComparator.hpp  CVBlobsImageComparator.hpp  Constants.hpp  DifferencesFinder.hpp  HistogramImageComparator.hpp  IImageComparator.hpp  MSEImageComparator.hpp  PoliMiImageComparator.hpp  Utils.hpp  WhiteLineImageComparator.hpp
include/demoalgorithms/: PSNRImageComparator.hpp  PixelWiseImageComparator.hpp  SSIMImageComparator.hpp  SVMImageComparator.hpp
sources/: BlobDetect.cpp  CPSImageComparator.cpp  CVBlobsImageComparator.cpp  DifferencesFinder.cpp  HistogramImageComparator.cpp  MSEImageComparator.cpp  PSNRImageComparator.cpp  PixelWiseImageComparator.cpp  PoliMiImageComparator.cpp  SSIMImageComparator.cpp  Utils.cpp  WhiteLineImageComparator.cpp  main.cpp
sources/demoalgorithms/: CVBlobsImageComparator.cpp  HistogramImageComparator.cpp  MSEImageComparator.cpp  PSNRImageComparator.cpp  PixelWiseImageComparator.cpp  SSIMImageComparator.cpp  SVMImageComparator.cpp  WhiteLineImageComparator.cpp
